// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with primary and secondary buttons 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(-360deg);
    -moz-transform: rotate(-360deg);
    -ms-transform: rotate(-360deg);
    transform: rotate(-360deg);
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  gap: 0.75rem;
}

.emotion-2 {
  border: 2px solid transparent;
  background: linear-gradient(0deg, rgb(93,108,208) 50%, transparent 50% 100%) border-box,linear-gradient(90deg, rgb(93,108,208) 25%, transparent 75% 100%) border-box;
  -webkit-mask: linear-gradient(#fff 0 0) padding-box,linear-gradient(#fff 0 0);
  mask: linear-gradient(#fff 0 0) padding-box,linear-gradient(#fff 0 0);
  -webkit-mask-composite: xor;
  -webkit-mask-composite: exclude;
  mask-composite: exclude;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  height: 1rem;
  width: 1rem;
  display: inline-block;
  box-sizing: border-box;
  border-radius: 625rem;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--echoes-dimension-space-100);
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="sw-relative"
    >
      <div
        class="sw-overflow-hidden sw-sr-only"
      >
        <div
          aria-live="polite"
          class="emotion-2 emotion-3"
          role="status"
        />
      </div>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
      <button
        type="button"
      >
        Primary
      </button>
      <button
        type="reset"
      >
        Reset
      </button>
    </span>
  </div>
</div>
`;

exports[`should render with secondary button 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(-360deg);
    -moz-transform: rotate(-360deg);
    -ms-transform: rotate(-360deg);
    transform: rotate(-360deg);
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  gap: 0.75rem;
}

.emotion-2 {
  border: 2px solid transparent;
  background: linear-gradient(0deg, rgb(93,108,208) 50%, transparent 50% 100%) border-box,linear-gradient(90deg, rgb(93,108,208) 25%, transparent 75% 100%) border-box;
  -webkit-mask: linear-gradient(#fff 0 0) padding-box,linear-gradient(#fff 0 0);
  mask: linear-gradient(#fff 0 0) padding-box,linear-gradient(#fff 0 0);
  -webkit-mask-composite: xor;
  -webkit-mask-composite: exclude;
  mask-composite: exclude;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  height: 1rem;
  width: 1rem;
  display: inline-block;
  box-sizing: border-box;
  border-radius: 625rem;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--echoes-dimension-space-100);
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="sw-relative"
    >
      <div
        class="sw-overflow-hidden sw-sr-only"
      >
        <div
          aria-live="polite"
          class="emotion-2 emotion-3"
          role="status"
        />
      </div>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
      <button
        type="button"
      >
        Close
      </button>
    </span>
  </div>
</div>
`;
